--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,3 +20,9 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
 Depends: 
     R (>= 2.10)
+Imports:
+    dplyr,
+    magrittr,
+    ggplot2,
+    scales,
+    utils
