--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,7 @@
 Package: abxaware
 Title: AWaRe classification of Antibiotic Usage Data
 Version: 0.0.0.9000
+Date: 2021-09-19
 Authors@R: 
     c(person(given = "Jacob",
              family = "Anhøj",
@@ -19,7 +20,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Depends: 
     R (>= 3.3)
 Imports:
