--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,7 +20,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.3
 Depends: 
     R (>= 3.3)
 Imports:
@@ -30,8 +30,7 @@ Imports:
     forcats,
     magrittr,
     ggplot2,
-    scales,
-    utils
+    scales
 Suggests: 
     rmarkdown,
     knitr
