--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: abxaware
 Title: AWaRe classification of Antibiotic Usage Data
-Version: 0.0.1
-Date: 2024-01-31
+Version: 0.0.0.9000
+Date: 2021-09-19
 Authors@R: 
     c(person(given = "Jacob",
              family = "Anhøj",
@@ -12,11 +12,7 @@ Authors@R:
              family = "Boel",
              role = c("aut"),
              email = "",
-             comment = c(ORCID = "0000-0003-3085-0930")),
-      person(given = "Marc Trunjer Kusk",
-             family = "Nielsen",
-             role = c("aut"),
-             email = "marc.mtk@gmail.com"))
+             comment = c(ORCID = "0000-0003-3085-0930")))
 Description: 
   Aggregate and plot antibiotic usage data by access, watch, and reserve
   (AWaRe) groups.
